忽略状态强制杀死进程；bat添加JAVA_HOME变量